# openkeg

./: .gitignore  Cargo.toml  Dockerfile  Makefile  keg.example.toml  openkeg.service  readme.adoc  rustfmt.hook
doc/: dockerhub-overview.md
scripts/: docker-multiarch-build.sh
src/: api_result.rs  config.rs  cors.rs  database.rs  errors.rs  info.rs  ldap.rs  main.rs  openapi.rs  schema_util.rs
src/archive/: book.rs  controller.rs  mod.rs  model.rs  score.rs  statistic.rs
src/archive/database/: fuzzy.rs  mod.rs  score.rs  statistic.rs
src/calendar/: controller.rs  mod.rs  model.rs
src/database/: client.rs  fuzzy_tests.rs  mod.rs  score.rs  statistic.rs
src/document/: mod.rs  model.rs  service.rs
src/ldap/: auth.rs  mod.rs  sync.rs
src/member/: controller.rs  mod.rs  model.rs  state.rs
src/members/: controller.rs  ldap.rs  mod.rs  model.rs  photo.rs  state.rs
src/user/: auth.rs  controller.rs  executives.rs  key.rs  mod.rs  model.rs  self_service.rs  tokens.rs
