[package]
name = "openkeg"
version = "0.1.3"
edition = "2021"
authors = ["Richard Stöckl"]
license = "GPLv2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = []

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
figment = { version = "0.10.6", features = ["env", "toml", "json"] }
serde = "1.0.137"
serde_json = { version = "1.0.81", features = ["preserve_order"] }
rocket_okapi = { version = "0.8.0-rc.2" }
schemars = "0.8.10"
okapi = { version = "0.7.0-rc.1", features = ["impl_json_schema", "preserve_order"] }
ldap3 = "0.10.5"
futures = "0.3.21"
env_logger = "0.9.0"
log = "0.4.17"
base64 = "0.20.0-alpha.1"
jsonwebtoken = "8.1.1"
chrono = "0.4.19"
reqwest = { version = "0.11.11", features = ["cookies", "json", "serde_json"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }

[dev-dependencies]
regex = "1.6.0"

[profile.release]
opt-level = "s"
lto = true